--- a/users/templates/control_acceso/sign-in.html
+++ b/users/templates/control_acceso/sign-in.html
@@ -16,7 +16,7 @@
           <div class="mb-4">
             <a href="../index.html"><img src="../assets/images/brand/logo/logo-icon.svg" class="mb-4" alt=""></a>
             <h1 class="mb-1 fw-bold">Iniciar sesión</h1>
-            <!-- <span>¿No estas registrado? <a href="{% url 'users:signup' %}" class="ms-1">Registrate</a></span> -->
+            <span>¿No estas registrado? <a href="{% url 'users:signup' %}" class="ms-1">Registrate</a></span> 
           </div>
           <!-- <div>
             <span class="text-danger" id="message_top"><i class="fas fa-info-circle"></i></span>
